' Generated by UML Generator
' Encoded: fLN1Rjim3BtxAmJquZGsi7Cm51sI1HZG3S7QMx638hCkCLiA9Bc7TVttIRBaI5RGfDWbG1x99_8zIhvLcaezz5sXVYC_K4bxmZggr1Uj9Uu73T-OuFVu1yYduXaR80mbww0eN1PPTmXS0taj2AcvwFSILkJUbFBM8an82I966fJ060eUWxNvMNggCcMfICfHaOnXOQjRq3zSORc8c9TgWbDQa_GYiF6LQtT4LkdXj86qSXEQoOgFaRpX8uKM8nILlmLjlrFaJjZbgt598tiZlO5AAbiLiXz_1RAfR0SDDc9qX8sQhe9F5Zj8qGnC2yDnXqf_tld_DpRu1EoPPjQCbEMShI99klE1jX9QAWDf6KvRaG15qpFQiQ6Zya5esba96Z7iEzlbiXTAIof_WXfwSEh6VlbLMSI3ESTyODvfMXuwKPOWqy1cRErScQKZcivyL9_kRSTC4s-3ftH6N6LNu-fWbW95DBANEWWtlmPf_YAMR-T2M-Hp4V_hKeoiAQ6Qu5axbsrq66w3BHh7nntLjATSR40nizWq5gH31fpXYNrCUSveLP7JHrHaVi35gZuaX9b6i_3furErxtmhcLDJ86lsOvflKI4BpuAvNF2LlxopVsFwMMLpfeirN4-bcNvHwCG1v-Rs3-1rNK-lWuU4WSA0nNmPw_hlJHxrigN1M-2D-MR-0m
' URL: http://www.plantuml.com/plantuml/uml/fLN1Rjim3BtxAmJquZGsi7Cm51sI1HZG3S7QMx638hCkCLiA9Bc7TVttIRBaI5RGfDWbG1x99_8zIhvLcaezz5sXVYC_K4bxmZggr1Uj9Uu73T-OuFVu1yYduXaR80mbww0eN1PPTmXS0taj2AcvwFSILkJUbFBM8an82I966fJ060eUWxNvMNggCcMfICfHaOnXOQjRq3zSORc8c9TgWbDQa_GYiF6LQtT4LkdXj86qSXEQoOgFaRpX8uKM8nILlmLjlrFaJjZbgt598tiZlO5AAbiLiXz_1RAfR0SDDc9qX8sQhe9F5Zj8qGnC2yDnXqf_tld_DpRu1EoPPjQCbEMShI99klE1jX9QAWDf6KvRaG15qpFQiQ6Zya5esba96Z7iEzlbiXTAIof_WXfwSEh6VlbLMSI3ESTyODvfMXuwKPOWqy1cRErScQKZcivyL9_kRSTC4s-3ftH6N6LNu-fWbW95DBANEWWtlmPf_YAMR-T2M-Hp4V_hKeoiAQ6Qu5axbsrq66w3BHh7nntLjATSR40nizWq5gH31fpXYNrCUSveLP7JHrHaVi35gZuaX9b6i_3furErxtmhcLDJ86lsOvflKI4BpuAvNF2LlxopVsFwMMLpfeirN4-bcNvHwCG1v-Rs3-1rNK-lWuU4WSA0nNmPw_hlJHxrigN1M-2D-MR-0m
' Generated on: 2025-11-25T14:41:25.211548300

@startuml
skinparam classAttributeIconSize 0
hide circle

class Cliente {
  -nombre: String
  -correo: String
  -direccion: String
  --
  +Cliente(nombre: String, correo: String, direccion: String)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getCorreo(): String
  +setCorreo(correo: String): void
  +getDireccion(): String
  +setDireccion(direccion: String): void
  +toString(): String
}

class Main {
  +{static} main(args: String[]): void
}

class Pedido {
  -cliente: Cliente
  -productos: List<Producto>
  -fecha: String
  --
  +Pedido(cliente: Cliente, fecha: String)
  +agregarProducto(producto: Producto): void
  +calcularTotal(): double
  +mostrarResumen(): void
  +getCliente(): Cliente
  +setCliente(cliente: Cliente): void
  +getProductos(): List<Producto>
  +getFecha(): String
  +setFecha(fecha: String): void
}

abstract class Producto {
  #nombre: String
  #precio: double
  --
  +Producto(nombre: String, precio: double)
  +calcularPrecioFinal(): double
  +getNombre(): String
  +setNombre(nombre: String): void
  +getPrecio(): double
  +setPrecio(precio: double): void
  +toString(): String
}

class ProductoDigital {
  -tamanoDescarga: double
  -licencia: String
  --
  +ProductoDigital(nombre: String, precio: double, tamanoDescarga: double, licencia: String)
  +calcularPrecioFinal(): double
  +getTamanoDescarga(): double
  +setTamanoDescarga(tamanoDescarga: double): void
  +getLicencia(): String
  +setLicencia(licencia: String): void
  +toString(): String
}

class ProductoFisico {
  -costeEnvio: double
  --
  +ProductoFisico(nombre: String, precio: double, costeEnvio: double)
  +calcularPrecioFinal(): double
  +getCosteEnvio(): double
  +setCosteEnvio(costeEnvio: double): void
  +toString(): String
}

Pedido *-- Cliente
Pedido o-- Producto
ProductoDigital --|> Producto
ProductoFisico --|> Producto
@enduml